[backend]:
 - настройка серверных cookies
