# src/main/java/com/gearit/api/controller/auth/YandexAuthController.java
@@ -1,12 +1,22 @@
 package com.gearit.api.controller.auth;
 
-import com.gearit.api.config.properties.*;
-import com.gearit.api.dto.response.*;
-import com.gearit.api.service.auth.*;
-import org.slf4j.*;
-import org.springframework.beans.factory.annotation.*;
-import org.springframework.http.*;
-import org.springframework.web.bind.annotation.*;
+import com.gearit.api.config.properties.YandexProperties;
+import com.gearit.api.constants.http.CookieObjects.RefreshCookie;
+import com.gearit.api.dto.response.LoginResponse;
+import com.gearit.api.dto.response.TokenResponse;
+import com.gearit.api.service.auth.YandexOAuthService;
+import com.gearit.api.utils.http.HttpCookieUtils;
+import jakarta.servlet.http.HttpServletResponse;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequestMapping("/api/v1/yandex")
@@ -39,10 +49,12 @@ public class YandexAuthController {
     }
 
     @GetMapping("/callback")
-    public ResponseEntity<TokenResponse> callback(@RequestParam String code) {
+    public ResponseEntity<LoginResponse> callback(@RequestParam String code, HttpServletResponse servletResponse) {
         try {
-            TokenResponse response = yandexOAuthService.callbackAuthentication(code);
-            return ResponseEntity.ok(response);
+            TokenResponse tokenResponse = yandexOAuthService.callbackAuthentication(code);
+            HttpCookieUtils.setHttpCookie(servletResponse, new RefreshCookie(tokenResponse.refreshToken()));
+
+            return ResponseEntity.ok(new LoginResponse(tokenResponse.accessToken()));
         } catch (Exception exception) {
             logger.error(exception.getMessage(), exception);
         }
