# src/main/java/com/gearit/api/dto/request/TokenRequest.java
@@ -1,4 +1,0 @@
-package com.gearit.api.dto.request;
-
-public record TokenRequest(String refreshToken) {
-}
